[package]
name = "vecno-p2p-mining"
description = "Vecno p2p mining"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vecno-core.workspace = true
vecno-consensus-core.workspace = true
vecno-consensusmanager.workspace = true
vecno-mining-errors.workspace = true
vecno-hashes.workspace = true
vecno-math.workspace = true
vecno-p2p-lib.workspace = true
vecno-utils.workspace = true
vecno-utils-tower.workspace = true
log.workspace = true
tokio.workspace = true

[lints]
workspace = true
